ajustes en section class hero: lineas 40-48

--- a/index.html
+++ b/index.html
@@ -13,30 +13,27 @@
     </div>
 
     <nav class="toolbar__nav">
-      <a href="#" class="toolbar__link">🎯 Explorar</a>
-      <a href="#" class="toolbar__link">🎨 Generar</a>
-      <a href="#" class="toolbar__link">📦 Paletas Guardadas</a>
-      <a href="#" class="toolbar__link">✍️ Blog</a>
-      <a href="#" class="toolbar__link">🌈 Populares</a>
-      
-      <!-- Botones de acciones principales en la navbar -->
-      <button id="generateBtn" class="toolbar__action-btn" title="Generar nueva paleta">🔄</button>
-      <button id="saveFavBtn" class="toolbar__action-btn" title="Guardar como favorita">❤️</button>
-      <button id="exportBtn" class="toolbar__action-btn" title="Exportar paleta">💾</button>
-      <button id="shareBtn" class="toolbar__action-btn" title="Compartir paleta">📤</button>
+      <!-- Botones de acciones principales en la navbar CON ETIQUETAS -->
+      <button id="generateBtn" class="toolbar__action-btn" title="Generar nueva paleta">
+        <span class="btn-icon">🔄</span>
+        <span class="btn-label">Generar</span>
+      </button>
+      <button id="saveFavBtn" class="toolbar__action-btn" title="Guardar como favorita">
+        <span class="btn-icon">❤️</span>
+        <span class="btn-label">Favorita</span>
+      </button>
+      <button id="exportBtn" class="toolbar__action-btn" title="Exportar paleta">
+        <span class="btn-icon">💾</span>
+        <span class="btn-label">Exportar</span>
+      </button>
+      <button id="shareBtn" class="toolbar__action-btn" title="Compartir paleta">
+        <span class="btn-icon">📤</span>
+        <span class="btn-label">Compartir</span>
+      </button>
     </nav>
 
     <div class="toolbar__actions">
-      <input 
-        type="text" 
-        class="toolbar__search" 
-        placeholder="Buscar colores o paletas..."
-      />
-
-      <button id="themeToggle" class="toolbar__icon-btn">🌙</button>
-
-      <button class="toolbar__login">Iniciar sesión</button>
-      <button class="toolbar__register">Registrarse</button>
+      <button id="themeToggle" class="toolbar__icon-btn" title="Cambiar tema">🌙</button>
     </div>
   </header>
 
